WIP: Solstice -- fix issue where fixed nav wrapped on iOS

--- a/app/assets/stylesheets/layout-solstice.css.scss
+++ b/app/assets/stylesheets/layout-solstice.css.scss
@@ -109,7 +109,7 @@
   top: 0;
   left: 0;
   right: 0;
-  padding: 5px 30px;
+  padding: 5px 0.5rem;
   background-color: $solstice-muted-green;
   background-image: linear-gradient(
     brighten($solstice-muted-green, 10%) 15%,
